# pfpautomation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: install_test.yml
cevigspfpautomation/: __main__.py  plw.py
