[project]
name = "cevigspfpautomation"
authors = [
  {name = "BigPotatoPizzaHey"}
]

description = ""
readme = "README.md"
license = "GPL-3.0-only"
dynamic = ["version"]
requires-python = ">= 3.13"
dependencies = [
    "kegscraper",
    "playwright",
    "python-slugify"
]
[project.scripts]
cvpfp = "cevigspfpautomation.__main__:main"

[project.urls]
Repository = "https://github.com/CEVIGS/cevigspfpautomation"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cevigspfpautomation/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["cevigspfpautomation"]